force-app/main/default/objects/Question__c/fields/Need_Photo__c.field-meta.xml
<CustomField>
    <fullName>Need_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Photo</label>
    <type>Checkbox</type>
</CustomField>