force-app/main/default/objects/Question__c/fields/No_Issue__c.field-meta.xml
<CustomField>
    <fullName>No_Issue__c</fullName>
    <description>Issue for No Answer</description>
    <label>No Issue</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>