force-app/main/default/objects/Question__c/fields/No_Skip_To_Question__c.field-meta.xml
<CustomField>
    <fullName>No_Skip_To_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>No - Skip To Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions (No - Skip To Question)</relationshipLabel>
    <relationshipName>Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>