force-app/main/default/objects/Question__c/fields/Recomendation__c.field-meta.xml
<CustomField>
    <fullName>Recomendation__c</fullName>
    <label>Recomendation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>