force-app/main/default/objects/Question__c/fields/Threat_Points__c.field-meta.xml
<CustomField>
    <fullName>Threat_Points__c</fullName>
    <label>Threat Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>