force-app/main/default/objects/Question__c/fields/Yes_Additions__c.field-meta.xml
<CustomField>
    <fullName>Yes_Additions__c</fullName>
    <label>Yes Additions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>End Questionnaire</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
                <isActive>false</isActive>
                <label>Note</label>
            </value>
            <value>
                <fullName>Photo</fullName>
                <isActive>false</isActive>
                <label>Photo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>