force-app/main/default/objects/Question__c/fields/Yes_Issue__c.field-meta.xml
<CustomField>
    <fullName>Yes_Issue__c</fullName>
    <description>Issue for Yes answer</description>
    <label>Yes Issue</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>