force-app/main/default/objects/Question__c/fields/Yes_Skip_To_Question__c.field-meta.xml
<CustomField>
    <fullName>Yes_Skip_To_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yes - Skip To Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>